# StudyHive

./: .gitignore  AI_INTEGRATION_FLOW.md  BROWSER_SETUP.md  CHECKLIST.md  HOW_TO_CHECK_CONSOLE.md  PRODUCTION_READY.md  PROJECT_STATUS_REPORT.md  README.md  SETUP.md  TESTING_CHECKLIST.md  ai-diagnostic.html  cheatsheets.html  courses.html  history.html  index.html  notes.html  package.json  profile.html  quiz-engine.js  quizzes.html  script.js  style.css  tauri.conf.json  test-ai.html  test-notes.md  vite.config.js  web-llm-bridge.js
Pomodoro/: cheatsheets.html  courses.html  games.html  history.html  index.html  notes.html  quizzes.html  script.js  style.css
android/: ConnectivityMonitor.kt
core/cache/: kv_store.cc  kv_store.h
core/grammars/: grade.gbnf  quiz.gbnf
core/llm/: llama_bridge.cc  llama_bridge.h
core/rules/: grading.cc  grading.h  qgen_rules.cc  qgen_rules.h
core/schemas/: grade.json  quiz.json
core/selector/: engine_selector.cc  engine_selector.h
core/wordnet/: README.md  wn_adapter.cc  wn_adapter.h
ios/: ConnectivityMonitor.swift
licenses/: THIRD_PARTY.md
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
